--- a/Ej/Brz/index.html
+++ b/Ej/Brz/index.html
@@ -1,114 +1,320 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Libro – Brazos y Pecho</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Brazos y Pecho (Libro)</title>
+
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#111827;color:#e5e7eb}
-.app{max-width:820px;margin:auto;padding:16px}
-h1{font-size:18px;margin-bottom:10px}
-.page{background:#fff;color:#111827;border-radius:14px;padding:16px;
-min-height:520px;box-shadow:0 14px 40px rgba(0,0,0,.35)}
-.top{display:flex;justify-content:space-between}
-h2{margin:0}
-.why{color:#4b5563;margin:6px 0 14px}
-.imgbox{border:2px solid #cbd5e1;border-radius:12px;
-min-height:220px;display:flex;align-items:center;justify-content:center;
-background:#f8fafc;margin-bottom:14px}
-.imgbox img{width:100%;height:100%;object-fit:contain}
-ol{padding-left:18px}
-li{margin:6px 0}
-.dose{margin-top:10px;color:#374151;font-size:14px}
-.controls{display:flex;gap:10px;margin-top:12px}
-button{flex:1;padding:12px;border-radius:12px;
-border:1px solid #374151;background:#111827;color:#e5e7eb;
-font-weight:bold;cursor:pointer}
-button:disabled{opacity:.4}
+  :root{
+    --ink:#0f172a;
+    --muted:#475569;
+    --card:#ffffff;
+    --border:rgba(15,23,42,.14);
+    --shadow: 0 10px 30px rgba(2,6,23,.08);
+    --radius:18px;
+  }
 
+  body{
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    color:var(--ink);
+    background:
+      radial-gradient(1200px 600px at 15% 10%, rgba(99,102,241,.10), transparent 60%),
+      radial-gradient(900px 500px at 85% 15%, rgba(14,165,233,.10), transparent 55%),
+      radial-gradient(800px 500px at 50% 95%, rgba(34,197,94,.07), transparent 55%),
+      radial-gradient(600px 300px at 25% 55%, rgba(255,255,255,.7), rgba(255,255,255,0) 70%),
+      linear-gradient(180deg, #f8fafc, #f3f4f6);
+  }
+
+  .wrap{ max-width: 980px; margin:auto; padding: 18px; }
+
+  .topbar{
+    display:flex; align-items:center; justify-content:space-between;
+    padding: 10px 4px 14px 4px;
+  }
+  .crumb{
+    display:flex; align-items:center; gap:10px;
+    font-weight:800; font-size:14px;
+  }
+  .dot{
+    width:10px; height:10px; border-radius:3px;
+    background: linear-gradient(135deg, rgba(59,130,246,.9), rgba(99,102,241,.9));
+    box-shadow: 0 6px 18px rgba(59,130,246,.20);
+  }
+  .pagecounter{ font-size:12px; color: var(--muted); }
+
+  .book{
+    background: rgba(255,255,255,.55);
+    border: 1px solid rgba(15,23,42,.08);
+    border-radius: 22px;
+    box-shadow: var(--shadow);
+    overflow:hidden;
+    backdrop-filter: blur(6px);
+  }
+
+  .page{
+    display:none;
+    padding: 18px;
+    background: rgba(255,255,255,.75);
+    min-height: 560px;
+  }
+  .page.active{ display:block; }
+
+  h1{ margin: 2px 0 6px 0; font-size:22px; }
+  .sub{ margin:0 0 14px 0; color:var(--muted); font-size:13px; }
+
+  .section-title{
+    display:flex; align-items:center; justify-content:space-between;
+    margin-bottom: 10px;
+  }
+  .section-title h2{ margin:0; font-size:16px; }
+  .hint{ font-size:12px; color:var(--muted); }
+
+  .grid{
+    display:grid;
+    grid-template-columns: 1fr;
+    gap: 14px;
+  }
+  @media (min-width: 860px){
+    .grid.two{ grid-template-columns: 1fr 1fr; }
+  }
+
+  .card{
+    background: var(--card);
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+    padding: 14px;
+    box-shadow: 0 10px 26px rgba(2,6,23,.06);
+  }
+  .card h3{ margin:0 0 6px 0; font-size:16px; }
+  .card p{ margin:0 0 10px 0; font-size:13px; color:#334155; }
+
+  .imgbox{
+    border: 2px dashed rgba(15,23,42,.18);
+    border-radius: 14px;
+    height: 240px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-bottom: 10px;
+    background:
+      radial-gradient(700px 240px at 20% 20%, rgba(59,130,246,.07), transparent 55%),
+      radial-gradient(500px 220px at 80% 30%, rgba(14,165,233,.07), transparent 55%),
+      #fbfbfe;
+    overflow:hidden;
+  }
   .imgbox img{
-  width: 100%;
-  height: 250px;
-  object-fit: contain;
-}
+    width:100%; height:240px; object-fit:contain;
+  }
 
+  ol{ margin:0; padding-left:18px; font-size:13px; color:#0f172a; }
+  li{ margin:6px 0; }
+  .note{ font-size:12px; color:#475569; margin-top:8px; }
+
+  /* reels */
+  .embed{
+    width:100%;
+    height: 320px;
+    border:0;
+    border-radius: 14px;
+    overflow:hidden;
+    background:#f8fafc;
+  }
+  .embed-wrap{
+    border: 1px solid rgba(15,23,42,.14);
+    border-radius: 16px;
+    overflow:hidden;
+    box-shadow: 0 10px 26px rgba(2,6,23,.05);
+  }
+  .small{
+    font-size:12px; color:var(--muted); margin-top:8px;
+    word-break: break-word;
+  }
+
+  .nav{
+    display:flex;
+    gap: 12px;
+    padding: 14px;
+    border-top: 1px solid rgba(15,23,42,.10);
+    background: rgba(255,255,255,.65);
+    justify-content:space-between;
+  }
+  button, a.btn{
+    border:1px solid rgba(15,23,42,.18);
+    background: rgba(255,255,255,.85);
+    color: var(--ink);
+    border-radius: 999px;
+    padding: 10px 14px;
+    font-weight: 800;
+    cursor:pointer;
+    min-width: 140px;
+    text-decoration:none;
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    box-shadow: 0 8px 18px rgba(2,6,23,.06);
+  }
+  button.primary{
+    background: linear-gradient(135deg, rgba(59,130,246,.92), rgba(99,102,241,.92));
+    border-color: transparent;
+    color: white;
+  }
+  button:disabled{ opacity:.45; cursor:not-allowed; }
 </style>
 </head>
 
 <body>
-<div class="app">
-<h1>📘 Brazos y Pecho</h1>
-<div class="page" id="page"></div>
+<div class="wrap">
 
-<div class="controls">
-<button id="prev">← Anterior</button>
-<button id="next">Siguiente →</button>
-</div>
+  <div class="topbar">
+    <div class="crumb"><span class="dot"></span> Brazos + Pecho</div>
+    <div class="pagecounter" id="counter">1/3</div>
+  </div>
+
+  <div class="book">
+
+    <!-- PÁGINA 1: PORTADA -->
+    <section class="page active" data-page="1">
+      <h1>Brazos y Pecho</h1>
+      <p class="sub">Rutina con mancuernas. Formato libro: portada → ejercicios → reels.</p>
+
+      <div class="card">
+        <div class="section-title">
+          <h2>Índice</h2>
+          <span class="hint">Páginas</span>
+        </div>
+        <ol>
+          <li>Portada</li>
+          <li>Ejercicios (imágenes + pasos)</li>
+          <li>Reels (Brazos) + regresar al índice</li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- PÁGINA 2: EJERCICIOS (tus 3 ejercicios) -->
+    <section class="page" data-page="2">
+      <h1>Ejercicios</h1>
+      <p class="sub">Brazos y pecho con control y buena forma</p>
+
+      <div class="grid">
+
+        <div class="card">
+          <h3>1. Curl de bíceps sentado</h3>
+          <p>Da firmeza al brazo y quita el aspecto gelatinoso.</p>
+          <div class="imgbox"><img src="img/biceps_sentado.jpg" alt="Curl de bíceps sentado"></div>
+          <ol>
+            <li>Siéntate con la espalda apoyada.</li>
+            <li>Brazos a los lados, mancuernas en las manos.</li>
+            <li>Flexiona los codos y sube.</li>
+            <li>Baja lento y controlado.</li>
+          </ol>
+          <p class="note"><b>3 × 12–15</b></p>
+        </div>
+
+        <div class="card">
+          <h3>2. Press de pecho acostada</h3>
+          <p>Fortalece pecho y brazos sin cargar cuello ni columna.</p>
+          <div class="imgbox"><img src="img/pecho_acostada.jpg" alt="Press de pecho acostada"></div>
+          <ol>
+            <li>Acuéstate boca arriba.</li>
+            <li>Mancuernas a la altura del pecho.</li>
+            <li>Empuja al frente.</li>
+            <li>Baja lento.</li>
+          </ol>
+          <p class="note"><b>3 × 10–12</b></p>
+        </div>
+
+        <div class="card">
+          <h3>3. Remo con mancuernas sentado</h3>
+          <p>Endurece brazos y espalda, mejora postura.</p>
+          <div class="imgbox"><img src="img/remo_sentado.jpg" alt="Remo con mancuernas sentado"></div>
+          <ol>
+            <li>Siéntate derecha.</li>
+            <li>Brazos al frente con mancuernas.</li>
+            <li>Jala hacia el cuerpo.</li>
+            <li>Aprieta atrás y baja lento.</li>
+          </ol>
+          <p class="note"><b>3 × 12</b></p>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- PÁGINA 3: REELS (SOLO BRAZOS) + REGRESAR -->
+    <section class="page" data-page="3">
+      <div class="section-title">
+        <h2>Reels – Brazos</h2>
+        <span class="hint">Embebidos</span>
+      </div>
+
+      <div class="grid two">
+
+        <div class="card">
+          <h3>Brazos</h3>
+          <div class="embed-wrap">
+            <iframe class="embed"
+              src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Freel%2F842295611857002&show_text=false&width=560"
+              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+              allowfullscreen="true"></iframe>
+          </div>
+          <div class="small">https://www.facebook.com/reel/842295611857002</div>
+        </div>
+
+        <div class="card">
+          <h3>Brazos</h3>
+          <div class="embed-wrap">
+            <iframe class="embed"
+              src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Freel%2F2654363338254340&show_text=false&width=560"
+              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+              allowfullscreen="true"></iframe>
+          </div>
+          <div class="small">https://www.facebook.com/reel/2654363338254340</div>
+        </div>
+
+      </div>
+
+      <div style="margin-top:14px;">
+        <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Indice/" target="_self">
+          ⟵ Regresar al Índice
+        </a>
+      </div>
+    </section>
+
+    <!-- NAVEGACIÓN -->
+    <div class="nav">
+      <button id="prevBtn">← Anterior</button>
+      <button id="nextBtn" class="primary">Siguiente →</button>
+    </div>
+
+  </div>
 </div>
 
 <script>
-const pages=[
-{
-title:"Curl de bíceps sentado",
-why:"Da firmeza al brazo y quita el aspecto gelatinoso.",
-img:"img/biceps_sentado.jpg",
-steps:[
-"Siéntate con la espalda apoyada.",
-"Brazos a los lados, mancuernas en las manos.",
-"Flexiona los codos y sube.",
-"Baja lento y controlado."
-],
-dose:"3 × 12–15"
-},
-{
-title:"Press de pecho acostada",
-why:"Fortalece pecho y brazos sin cargar cuello ni columna.",
-img:"img/pecho_acostada.jpg",
-steps:[
-"Acuéstate boca arriba.",
-"Mancuernas a la altura del pecho.",
-"Empuja al frente.",
-"Baja lento."
-],
-dose:"3 × 10–12"
-},
-{
-title:"Remo con mancuernas sentado",
-why:"Endurece brazos y espalda, mejora postura.",
-img:"img/remo_sentado.jpg",
-steps:[
-"Siéntate derecha.",
-"Brazos al frente con mancuernas.",
-"Jala hacia el cuerpo.",
-"Aprieta atrás y baja lento."
-],
-dose:"3 × 12"
-}
-];
+  const pages = Array.from(document.querySelectorAll(".page"));
+  const counter = document.getElementById("counter");
+  const prevBtn = document.getElementById("prevBtn");
+  const nextBtn = document.getElementById("nextBtn");
+  let idx = 0;
 
-let i=0;
-const page=document.getElementById("page");
-const prev=document.getElementById("prev");
-const next=document.getElementById("next");
+  function show(i){
+    idx = Math.max(0, Math.min(pages.length - 1, i));
+    pages.forEach((p, k) => p.classList.toggle("active", k === idx));
+    counter.textContent = `${idx+1}/${pages.length}`;
+    prevBtn.disabled = idx === 0;
+    nextBtn.disabled = idx === pages.length - 1;
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  }
 
-function render(){
-const p=pages[i];
-page.innerHTML=`
-<div class="top">
-<h2>${p.title}</h2>
-<b>${i+1}/3</b>
-</div>
-<p class="why">${p.why}</p>
-<div class="imgbox"><img src="${p.img}"></div>
-<ol>${p.steps.map(s=>`<li>${s}</li>`).join("")}</ol>
-<p class="dose"><b>Cuánto:</b> ${p.dose}</p>`;
-prev.disabled=i===0;
-next.disabled=i===pages.length-1;
-}
+  prevBtn.addEventListener("click", () => show(idx - 1));
+  nextBtn.addEventListener("click", () => show(idx + 1));
 
-prev.onclick=()=>{if(i>0){i--;render();}};
-next.onclick=()=>{if(i<2){i++;render();}};
-render();
+  window.addEventListener("keydown", (e) => {
+    if(e.key === "ArrowLeft") show(idx - 1);
+    if(e.key === "ArrowRight") show(idx + 1);
+  });
+
+  show(0);
 </script>
 </body>
 </html>
